fixed zoom not centred by removing th emargin adjustment as not needed anymore

--- a/app/globals.css
+++ b/app/globals.css
@@ -405,11 +405,17 @@ main {
 
 .vis-layout {
   width:100%;
-  height:100%;
+  height:98%;
+  border:solid;
+  border-color:black;
+  border-width:thin;
 }
 
 .vis {
   overflow:hidden;
+  border:solid;
+  border-color:black;
+  border-width:thin;
 }
 
 .vis-overview {
